# frenkel-ladd

./: .gitignore  10p-GLI.py  5p-GLI.py  CMakeLists.txt  FLFE-MyBox.csv  FLFE-OriginalBox.csv  FLFE-ploting.ipynb  FLFE.csv  GL_Integration.py  README.md  analyze.py  collect.py  collect.sh  hist.py  mean.py  minimum_distance.py  msd.data  plot_errorbar.ipynb  submit.sh  test.py  test_sample.ipynb
7360_EinsteinCrystal_MyBox_10pt_slurm_data/: 3x3x12.out  3x3x6.out  3x4x6.out  4x4x12.out  4x4x6.out  6x6x6.out  cubic 2.out  cubic 3.out  cubic 4.out  cubic 5.out
7360_EinsteinCrystal_OriginalBox_10pt_slurm_data/: 3x3x12.out  3x3x6.out  3x4x6.out  4x4x12.out  4x4x6.out  6x6x6.out  cubic 2.out  cubic 3.out
7360_EinsteinMolecule_20pt_slurm_data/: cubic 3.out  cubic 4.out  cubic 7.out  cubic 8.out
7778_EinsteinCrystal_OriginalBox_10pt_slurm_data/: 3x4x6.out  4x6x6.out  6x8x12.out  8x12x12.out
EinsteinCrystal-cpp/: CMakeLists.txt  data_analyze.ipynb  errorbar.ipynb
EinsteinCrystal-cpp/src/: MyBox.cpp  OriginalBox.cpp
EinsteinCrystal-cpp/src-mine/: main.cpp
msd_data_demo/: fcc_3x3x12_10pt.txt  fcc_3x3x6_10pt.txt  fcc_3x4x6_10pt.txt  fcc_4x4x12_10pt.txt  fcc_4x4x6_10pt.txt  fcc_6x6x6_10pt.txt
slurm_data/: 3x3x12.out  3x3x6.out  3x4x6.out  4x4x12.out  4x4x6.out  6x6x6.out  cubic 2.out  cubic 3.out  cubic 4.out
src/: MonteCarloSimulation.cpp  MonteCarloSimulation.h  Particle.cpp  Particle.h  Vector3D.cpp  Vector3D.h  main.cpp  myvariables.h  randomDouble.cpp  randomDouble.h
src-eigen/: main.cpp
src/lattice/: fcc-3x3x6.txt  fcc-3x4x6.txt
visualization/: gsd2pos.py
